Implementing light and dark mode and fixed header scrolling

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -10,6 +10,51 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
+/**
+html, html[data-theme="light"] {
+  $text-color:       #111 !default;
+  $background-color: #fdfdfd !default;
+  $brand-color:      #2a7ae2 !default;
+  
+  $grey-color:       #828282 !default;
+  $grey-color-light: lighten($grey-color, 40%) !default;
+  $grey-color-dark:  darken($grey-color, 25%) !default;  
+}
+
+html[data-theme="dark"] {
+  $text-color:       #fdfdfd !default;
+  $background-color: #111 !default;
+  $brand-color:      #ffdd1c !default;
+  
+  $grey-color:       #828282 !default;
+  $grey-color-light: darken($grey-color, 25%) !default;
+  $grey-color-dark:  lighten($grey-color, 40%) !default;
+
+@media (prefers-color-scheme: dark) {
+  html, html[data-them="dark"]{
+    $text-color:       #fdfdfd !default;
+    $background-color: #111 !default;
+    $brand-color:      #ffdd1c !default;
+    
+    $grey-color:       #828282 !default;
+    $grey-color-light: darken($grey-color, 25%) !default;
+    $grey-color-dark:  lighten($grey-color, 40%) !default;    
+  }
+
+  html[data-theme="light"]{
+    $text-color:       #111 !default;
+    $background-color: #fdfdfd !default;
+    $brand-color:      #2a7ae2 !default;
+    
+    $grey-color:       #828282 !default;
+    $grey-color-light: lighten($grey-color, 40%) !default;
+    $grey-color-dark:  darken($grey-color, 25%) !default;      
+  }
+}
+
+**/
+
+/**
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
 $brand-color:      #2a7ae2 !default;
@@ -17,6 +62,18 @@ $brand-color:      #2a7ae2 !default;
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark:  darken($grey-color, 25%) !default;
+**/
+
+$text-color:       #fdfdfd !default;
+$background-color: #111 !default;
+$brand-color:      #ffdd1c !default;
+$code-border-color: #0f0f0f;// #828282 !default;
+$code-background-color:  darken($code-border-color, 50%) !default;
+$code-text-color: rgb(1, 255, 14);
+
+$grey-color:       #828282 !default;
+$grey-color-light: lighten($grey-color, 25%) !default;
+$grey-color-dark:  darken($grey-color, 40%) !default;
 
 $table-text-align: left !default;
 
