--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -27,6 +27,10 @@ body {
   height: 100%;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  color: $grey-color;
+}
+
 html {
   height: 100%;
 }
@@ -173,9 +177,10 @@ blockquote {
 pre,
 code {
   @include relative-font-size(0.9375);
-  border: 1px solid $grey-color-light;
+  border: 1px solid $code-border-color;
   border-radius: 3px;
-  background-color: #eef;
+  background-color: $code-background-color;
+  color: $code-text-color;
 }
 
 code {
