--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -2,12 +2,18 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
+  border-top: 1px solid $grey-color-dark;
   border-bottom: 1px solid $grey-color-light;
   min-height: $spacing-unit * 1.865;
 
   // Positioning context for the mobile navigation icon
   position: relative;
+}
+
+.sticky {
+  position: relative;
+  top: 0;
+  width: 100%
 }
 
 .site-title {
@@ -17,10 +23,10 @@
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
-
+  
   &,
   &:visited {
-    color: $grey-color-dark;
+    color: $grey-color;
   }
 }
 
@@ -37,7 +43,7 @@
   }
 
   .page-link {
-    color: $text-color;
+    color: $brand-color;
     line-height: $base-line-height;
 
     // Gaps between nav items, but not on the last one
@@ -178,6 +184,10 @@
 .page-content {
   padding: $spacing-unit 0;
   flex: 1;
+}
+
+.sticky + .page-content {
+  padding-top: $spacing-unit 102;
 }
 
 .page-heading {
